--- a/pancakehouse.html
+++ b/pancakehouse.html
@@ -12,7 +12,7 @@
     </div>
 
     <script>
-      let host = "http://localhost:8080";
+      let host = "https://diner-pancakehouse-merge-mattpan09.onrender.com";
       let menuDiv = document.getElementById("menu");
 
       displayTheMenu();
